<resources>
    <string name="appname">麦视</string>
    <string name="appname_us">McVision</string>
    <string name="sdk_registration_message">SDK 注册失败. 请检查bundle ID 和网络连接</string>
    <string name="config">配置航线</string>
    <string name="customer_info">客户信息</string>
    <string name="weather_info">天气信息</string>
    <string name="bound_policy">关联保单</string>
    <string name="config_point">坐标标点</string>
    <string name="integral_time1">积分时间1：</string>
    <string name="integral_time2">积分时间2：</string>
    <string name="storage_format">存储格式：</string>
    <string name="calibration">白板定标：</string>
    <string name="calibration_tip">无白板勿开启</string>
    <string name="record">录像：</string>
    <string name="task_type">任务类型：</string>
    <string name="crop">监测作物</string>
    <string name="crop2">作物：</string>
    <string name="crop_type">作物类型</string>
    <string name="device_type">设备类型</string>
    <string name="growth_period">生&#8194;育&#8194;期</string>
    <string name="survey_type">查勘类型</string>
    <string name="survey_content">查勘内容</string>
    <string name="crop_variety">作物品种</string>
    <string name="policy_number">保单号</string>
    <string name="case_number">报案号</string>
    <string name="collection_times">采集次数：</string>
    <string name="random_error">预设误差：</string>
    <string name="cancle">取消</string>
    <string name="confirm">确定</string>
    <string name="retry">重试</string>
    <string name="stop">结束</string>
    <string name="camera_control">相机控制：</string>
    <string name="ready_time">拍照准备时间：</string>
    <string name="bluetooth_device">蓝牙设备</string>
    <string name="normal">下拉刷新</string>
    <string name="refresh_to_release">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_done">刷新完成</string>
    <string name="loading">正在加载..</string>
    <string name="pull_to_loading">上拉加载更多</string>
    <string name="nomore">无更多数据</string>
    <string name="flight_mode">模式</string>
    <string name="flight_speed">速度</string>
    <string name="flight_alt">高度</string>
    <string name="flight_battery">电量</string>
    <string name="flight_wind">风力</string>
    <string name="Mapping">地图打点</string>
    <string name="SurveyingAndMapping">测绘打点</string>
    <string name="CoordinateMapping">坐标打点</string>
    <string name="point_lng2">航点经度：</string>
    <string name="point_lat2">航点纬度：</string>
    <string name="rtk_unconnected">RTK未连接</string>
    <string name="space">垄宽(m)</string>
    <string name="altitude">高度(m)</string>
    <string name="step">间距(m)</string>
    <string name="spd">速度(m/s)</string>
    <string name="photo_interval">拍照间隔(秒)</string>
    <string name="start_point">起点</string>
    <string name="aoto">凹凸</string>
    <string name="save">保存</string>
    <string name="history_airway">历史航线</string>
    <string name="history_task">历史任务</string>
    <string name="Point">打点</string>
    <string name="Pause">暂停</string>
    <string name="Resume">继续</string>
    <string name="Start">开始</string>
    <string name="Stop">结束</string>
    <string name="bluetooth">蓝牙连接</string>
    <string name="unconnected">未连接</string>
    <string name="connected">已连接</string>
    <string name="connecting">正在连接</string>
    <string name="Coordinate_adjustment">坐标调整</string>
    <string name="coor_adjust">坐标调整</string>
    <string name="gcj02">GCJ-02</string>
    <string name="wgs84">WGS-84</string>
    <string name="gcj_02">火星坐标系GCJ-02</string>
    <string name="wgs_84">国际标准坐标系WGS-84</string>
    <string name="sort_intelligent">智能排序</string>
    <string name="sort_default">默认</string>
    <string name="screen_date">时间筛选</string>
    <string name="filter">筛选</string>
    <string name="time_asc">按照时间升序排列</string>
    <string name="time_desc">按照时间降序排列</string>
    <string name="edit">编辑</string>
    <string name="save_flyline">完成</string>
    <string name="airway_detail">任务详情</string>
    <string name="airway_name">任务名称：</string>
    <string name="airway_delete">删除任务</string>
    <string name="airway_use">使用任务</string>
    <string name="tip_nodronelocation">无人机尚未确定位置.</string>
    <string name="start_mission">即将开始无人机任务</string>
    <string name="upload_mission_config">正在上传无人机任务配置...</string>
    <string name="confirm_stop_mission">请确认要结束任务吗？</string>
    <string name="confirm_pause_mission">请确认要暂停任务吗？</string>
    <string name="confirm_resume_mission">请确认要继续任务吗？</string>
    <string name="upload_finish">无人机任务上传完成。\n请确认所有人员撤离到安全区域！！！\n5秒后可以点击开始按钮</string>
    <string name="monitor_history">监测历史</string>
    <string name="system_exception">系统异常，请稍后再试</string>
    <string name="config_exception">该用户尚未配置视频流地址</string>
    <string name="login_failed">登录失败</string>
    <string name="unlogin">当前登录状态异常，请重新登录</string>
    <string name="net_not_connected">网络未连接,请检查网络</string>
    <string name="try_again_later">请稍后再试</string>
    <string name="current_connected">当前连接</string>
    <string name="breakoff">断开</string>
    <string name="connect">连接</string>
    <string name="tip_aoto">当前航点规划出的多边形为凹多边形，是否使用凸多边形规划航线？</string>
    <string name="use">使用</string>
    <string name="no_use">不使用</string>
    <string name="failed_capture_screenshot">获取截图失败</string>
    <string name="draw_first">请先画好航线再保存</string>
    <string name="connect_rtk">连接RTK</string>
    <string name="rtk_disconnected">RTK连接已断开</string>
    <string name="rtk_connect_failed">RTK连接失败</string>
    <string name="copy_mission">将任务复制到：</string>
    <string name="copy_success">复制成功</string>
    <string name="areaname">航线名称</string>
    <string name="enter_name">请输入航线名称</string>
    <string name="record_flight_log_completion">记录飞行日志完成:</string>
    <string name="flight_heading">飞机航向角度：</string>
    <string name="unconnected_aircraft">未连接飞机.</string>
    <string name="set_radius_success">设置最大飞行半径成功</string>
    <string name="set_radius_failed">设置最大飞行半径失败</string>
    <string name="start_task">开始执行任务.</string>
    <string name="save_success">保存成功</string>
    <string name="account">请输入账号</string>
    <string name="password">请输入密码</string>
    <string name="login">登录</string>
    <string name="dialog_tip">温馨提示</string>
    <string name="lat">纬度：</string>
    <string name="lng">经度：</string>
    <string name="scanAcreage">扫描亩数：</string>
    <string name="lodgeAcreage">倒伏亩数：</string>
    <string name="rate">倒伏占比：</string>
    <string name="use_continuepoint">发现该任务的续航点，是否使用？</string>
    <string name="spray">喷洒量</string>
    <string name="csv">累计喷洒量</string>
    <string name="mudosage">亩用量</string>
    <string name="flightmodeerror">请将遥控器挡位拨到“P”或“F”档</string>
    <string name="copy">Copyright@2021 北大荒信息</string>
    <string name="airway">航线</string>
    <string name="waypoint">航点</string>
    <string name="checkers">跳棋</string>
    <string name="new_airway">新航线</string>
    <string name="new_checkers">新跳棋</string>
    <string name="new_waypoint">新航点</string>
    <string name="add_airway">添加航线</string>
    <string name="add_checkers">添加跳棋</string>
    <string name="add_waypoint">添加航点</string>
    <string name="missing_permissions">权限缺失！！！</string>
    <string name="divice_unconnected">设备未连接</string>
    <string name="no_airway">赶快去创建航线任务吧</string>
    <string name="no_checkers">赶快去创建跳棋任务吧</string>
    <string name="no_waypoint">赶快去创建航点任务吧</string>
    <string name="no_history">赶快去监测地块吧</string>
    <string name="orig">原始</string>
    <string name="radar">雷达</string>
    <string name="upload_original">原图</string>
    <string name="view_original">查看原图</string>
    <string name="hidden_original">隐藏原图</string>
    <string name="upload_preview">缩略图</string>
    <string name="ao">凹</string>
    <string name="to">凸</string>
    <string name="start_date">开始时间</string>
    <string name="end_date">结束时间</string>
    <string name="pls_choose">请选择</string>
    <string name="translation">平移(米)</string>
    <string name="flight_connected">已连接</string>
    <string name="only_rc_connected">只有遥控器连接</string>
    <string name="no_product_onnected">无人机未连接</string>
    <string name="camera_disconnected">相机未连接</string>
    <string name="product_disconnected">无人机未连接</string>
    <string name="login_success">大疆账号已登录</string>
    <string name="login_error">大疆账号未登录： %s</string>
    <string name="OnboardSDKDeviceAvailable">->板上SDK可用</string>
    <string name="OnboardSDKDeviceUnavailable">->板上SDK不可用</string>
    <string name="Total_Count">->任务点总数 %d</string>
    <string name="WaypointExecuteProgress">->第 %d 个任务点执行开始</string>
    <string name="WaypointExecuteFinish">->第 %d 个任务点执行结束</string>
    <string name="Start_OnBoard_Success">->开始采集指令设置成功. </string>
    <string name="Start_OnBoard_Failed">->开始采集指令设置失败: %s</string>
    <string name="Finish_OnBoard_Success">->任务结束，结束采集指令设置成功</string>
    <string name="Finish_OnBoard_Failed">->任务结束，结束采集指令设置失败:%s</string>
    <string name="Last_Finish_OnBoard_Success">->最后一个任务点结束采集指令设置成功.</string>
    <string name="Last_Finish_OnBoard_Failed">->最后一个任务点结束采集指令设置失败: %s</string>
    <string name="Index_Start_OnBoard_Success">->第 %d 个任务点开始采集指令设置成功 </string>
    <string name="Index_Finish_OnBoard_Success">->第 %d 个任务点结束采集指令设置成功</string>
    <string name="Index_Start_OnBoard_Failed">->第 %d 个任务点开始采集指令设置失败: %s</string>
    <string name="Index_Finish_OnBoard_Failed">->第 %d 个任务点结束采集指令设置失败: %s</string>
    <string name="Index_Begin">第 %d 个任务点动作开始</string>
    <string name="Index_Finish">第 %d 个任务点动作结束</string>
    <string name="uploading_boundary">无人机配置上传完成，上传任务边界...</string>
    <string name="upload_boundary_failed">上传任务边界失败：%s</string>
    <string name="upload_boundary">上传边界成功:</string>
    <string name="upload_boundary_error">未上传边界:%s</string>
    <string name="class_not_init">工具类未实例化</string>
    <string name="end_mission">任务结束</string>
    <string name="Set_OnBoard_Success">板上参数设置成功 </string>
    <string name="Set_OnBoard_Failed">板上参数设置失败:%s</string>
    <string name="Speed_Altitude">设置速度 %s m/s,高度 %s m</string>
    <string name="LoadMission_Success">加载任务成功</string>
    <string name="LoadMission_Failed">加载任务失败:%s</string>
    <string name="Set_GoHomeHeight_Success">设置返航高度成功:%d m</string>
    <string name="Set_GoHomeHeight_Failed">设置返航高度失败:%s</string>
    <string name="Set_BoundaryId_Success">向板上设置地块信息标识成功</string>
    <string name="Set_BoundaryId_Failed">向板上设置地块信息标识失败:%s</string>
    <string name="Mission_Upload_Success">上传任务成功!</string>
    <string name="Mission_Upload_Failed">上传任务失败:%s</string>
    <string name="Mission_Start_Success">开始任务成功!</string>
    <string name="Mission_Start_Failed">开始任务失败:%s</string>
    <string name="Mission_Stop_Success">结束任务成功!</string>
    <string name="Mission_Stop_Failed">结束任务失败:%s</string>
    <string name="Mission_Resume_Success">继续任务成功!</string>
    <string name="Mission_Resume_Failed">继续任务失败:%s</string>
    <string name="Mission_Pause_Success">暂停任务成功!</string>
    <string name="Mission_Pause_Failed">暂停任务失败:%s</string>
    <string name="StayTime_Not_Set">悬停时间未设置:%s</string>
    <string name="Set_CMode_Failed">设置相机拍照模式失败:%s</string>
    <string name="Start_SP_Failed">开始拍照失败:%s</string>
    <string name="Start_SP_Success">开始拍照成功</string>
    <string name="SPMode_Error">拍照模式不是间隔拍照模式</string>
    <string name="Stop_SP_Failed">结束拍照失败:%s</string>
    <string name="Stop_SP_Success">结束拍照成功</string>
    <string name="Set_PTIS_Success">设置拍照时间间隔成功</string>
    <string name="Set_PTIS_Failed">设置拍照时间间隔失败:%s</string>
    <string name="Set_JPG_Success">设置照片格式为JPEG成功</string>
    <string name="Set_JPG_Failed">设置照片格式为JPEG失败:%s</string>
    <string name="Set_SPMode_Success">设置间隔拍照模式成功</string>
    <string name="Set_SPMode_Failed">设置间隔拍照模式失败:%s</string>
    <string name="no_camera">未检测到相机，此次任务将不会拍照</string>
    <string name="gatherer">采集人：</string>
    <string name="monitortime">采集时间：</string>
    <string name="area">监测面积：</string>
    <string name="count">采集点数：</string>
    <string name="count_data">%d个</string>
    <string name="humidity">湿度：%s</string>
    <string name="wind">风力：%s</string>
    <string name="temperatureSection">温度区间：%s℃</string>
    <string name="precipitation">降水量：%s</string>
</resources>