<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/bound_policy"
        android:textColor="@color/color_green"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:background="@color/color_line" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <TextView
                    android:id="@+id/tv2"
                    android:layout_width="3dp"
                    android:layout_height="13dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="7dp"
                    android:background="@drawable/bg_circle_green" />

                <TextView
                    android:id="@+id/tv_policy_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_toRightOf="@+id/tv2"
                    android:text="@string/policy_number"
                    android:textColor="@color/text_black"
                    android:textSize="14sp"></TextView>

                <EditText
                    android:id="@+id/et_policy_number"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="30dp"
                    android:layout_toRightOf="@+id/tv_policy_number"
                    android:popupBackground="@color/white" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                >

                <TextView
                    android:id="@+id/tv4"
                    android:layout_width="3dp"
                    android:layout_height="13dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="7dp"
                    android:background="@drawable/bg_circle_green" />

                <TextView
                    android:id="@+id/tv_case_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_toRightOf="@+id/tv4"
                    android:text="@string/case_number"
                    android:textColor="@color/text_black"
                    android:textSize="14sp"></TextView>

                <EditText
                    android:id="@+id/et_case_number"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="30dp"
                    android:layout_toRightOf="@+id/tv_case_number"
                    android:popupBackground="@color/white"
                    />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_left"
                    android:layout_width="0dip"
                    android:layout_height="45dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/dialog_left_btn"
                    android:gravity="center"
                    android:text="@string/cancle"
                    android:textColor="@color/text_default"
                    android:textSize="16sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:background="@color/color_line"></View>

                <Button
                    android:id="@+id/bt_right"
                    android:layout_width="0dip"
                    android:layout_height="45dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/dialog_right_btn"
                    android:gravity="center"
                    android:text="@string/confirm"
                    android:textColor="@color/color_green"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
