<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map_drawerlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    tools:context="com.cimraffi.android.birdeye.base.MapActivity">

    <LinearLayout
        android:id="@+id/left_layout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/osd_info"
        android:layout_marginTop="110dp"
        android:gravity="left"
        android:orientation="vertical"
        android:paddingLeft="14dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/btn_live_show_status"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@mipmap/live_status" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.airbnb.android.airmapview.AirMapView
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#80000000"
                android:orientation="vertical" />

            <com.cimraffi.android.birdeye.view.VideoFeedView
                android:id="@+id/video_view_primary_video_feed"
                android:layout_width="130dp"
                android:layout_height="80dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="14dp"
                android:layout_marginBottom="82dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/coverlayout"
            android:layout_width="130dp"
            android:layout_height="80dp"
            android:layout_above="@+id/bottom_layout"
            android:layout_alignParentRight="true"
            android:layout_marginRight="14dp"
            android:layout_marginBottom="15dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="8dp"
                android:background="@mipmap/change" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/compass"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/osd_info"
            android:background="@mipmap/compass_v2" />

        <RelativeLayout
            android:id="@+id/head_title"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@drawable/map_title_bg">

            <Button
                android:id="@+id/map_back"
                android:layout_width="44dp"
                android:layout_height="0dp"
                android:background="@mipmap/white_back" />

            <TextView
                android:id="@+id/map_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/add_airway"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/osd_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/head_title"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/bg_osd"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="4dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/flight_mode"
                    android:textColor="@color/white"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/flight_mode_show"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="N/A"
                    android:textColor="@color/white"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="GPS"
                    android:textColor="@color/white"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/gps_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="N/A"
                    android:textColor="@color/white"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/flight_speed"
                    android:textColor="@color/white"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/speed_show"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="N/A"
                    android:textColor="@color/white"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/flight_alt"
                    android:textColor="@color/white"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/alti_show"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="N/A"
                    android:textColor="@color/white"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/flight_battery"
                    android:textColor="@color/white"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/battery_show"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="N/A"
                    android:textColor="@color/white"
                    android:textSize="10sp" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="23dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal">
                <!--设置航点，暂停任务，继续任务-->
                <TextView
                    android:id="@+id/pause"
                    android:layout_width="85dp"
                    android:layout_height="35dp"
                    android:background="@drawable/bg_round_white"
                    android:drawableLeft="@mipmap/ic_point"
                    android:gravity="center"
                    android:paddingLeft="15dp"
                    android:text="@string/Point"
                    android:textColor="@color/text_black"
                    android:textSize="17sp" />
                <!--开始，结束-->
                <TextView
                    android:id="@+id/start"
                    android:layout_width="85dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="18dp"
                    android:background="@drawable/bg_round_white"
                    android:drawableLeft="@mipmap/ic_start"
                    android:gravity="center"
                    android:paddingLeft="15dp"
                    android:text="@string/Start"
                    android:textColor="@color/text_black"
                    android:textSize="17sp" />
            </LinearLayout>

        </RelativeLayout>


    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>
    

